--- a/index.html
+++ b/index.html
@@ -1,63 +1,79 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fetch & Copy | Simple Viewer</title>
   <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    crossorigin="anonymous"
-  />
-  <!-- Bootstrap Icons (optional, for the copy icon) -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
   <style>
-    body { padding: 2rem 0; }
+    body {
+      padding: 2rem 0;
+    }
+
     textarea#content {
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-      white-space: pre;           /* preserve spacing */
-      overflow-wrap: normal;      /* no wrapping */
-      overflow-x: auto;           /* scroll horizontally if needed */
+      white-space: pre;
+      overflow-wrap: normal;
+      overflow-x: auto;
       min-height: 50vh;
     }
-    .spinner { display: none; }
+
+    .spinner {
+      display: none;
+    }
+
+    #toggle-controls {
+      position: sticky;
+      top: 1rem;
+      z-index: 20;
+    }
   </style>
 </head>
+
 <body>
   <div class="container">
-    <header class="mb-4">
-      <h1 class="h3">Fetch & Copy</h1>
-      <p class="text-muted mb-0">Provide <code>?url=...</code> in the address bar, or paste a URL below.</p>
+    <header class="mb-3 d-flex align-items-center justify-content-between">
+      <div>
+        <h1 class="h3 mb-1">Fetch & Copy</h1>
+        <p id="subtitle" class="text-muted mb-0">Paste a file URL and press <strong>Fetch</strong>, or open this page
+          with <code>?url=...</code>.</p>
+      </div>
+      <!-- Toggle to reveal/hide instructions -->
+      <button id="toggle-controls" class="btn btn-outline-secondary d-none">
+        <i class="bi bi-sliders"></i> Show instructions & URL
+      </button>
     </header>
 
-    <!-- URL input / controls -->
-    <div class="card mb-4">
+    <!-- Instructions + URL input -->
+    <div id="controls" class="card mb-4">
       <div class="card-body">
-        <form id="load-form" class="row gy-2 gx-2 align-items-center">
+        <div class="mb-3">
+          <h2 class="h5 mb-2">How to use</h2>
+          <ol class="mb-0 text-muted">
+            <li>Paste the file link below and click <strong>Fetch</strong>. You can also share a link like
+              <code>?url=YOUR_FILE_URL</code>.</li>
+            <li>After it loads, use <strong>Copy</strong> (always at the top of the content) to copy everything.</li>
+            <li class="text-warning">If it fails, the file’s website may block cross‑site downloads (CORS). Try another
+              host.</li>
+          </ol>
+        </div>
+
+        <form id="load-form" class="row gy-2 gx-2 align-items-end">
           <div class="col-12 col-lg">
             <label for="url" class="form-label mb-1">File URL</label>
             <input type="url" class="form-control" id="url" placeholder="https://example.com/file.txt" required />
           </div>
           <div class="col-auto">
-            <label class="form-label d-block mb-1 invisible">.</label>
-            <button id="load-btn" type="submit" class="btn btn-primary">
-              Load
-            </button>
-          </div>
-          <div class="col-auto">
-            <label class="form-label d-block mb-1 invisible">.</label>
-            <button id="copy-btn" type="button" class="btn btn-outline-secondary" disabled>
-              <i class="bi bi-clipboard"></i> Copy
-            </button>
+            <button id="load-btn" type="submit" class="btn btn-primary">Fetch</button>
           </div>
         </form>
 
         <div id="status" class="mt-3">
-          <div class="spinner d-inline-flex align-items-center" id="spinner">
+          <div class="spinner d-inline-flex align-items-center" id="spinner" aria-live="polite">
             <div class="spinner-border spinner-border-sm me-2" role="status" aria-hidden="true"></div>
             <span>Fetching…</span>
           </div>
@@ -70,13 +86,19 @@
     <!-- Content viewer -->
     <div class="mb-3 d-flex justify-content-between align-items-center">
       <h2 class="h5 mb-0">Content</h2>
-      <a id="open-raw" href="#" target="_blank" rel="noopener" class="small d-none">Open raw URL ↗</a>
+      <div class="d-flex align-items-center gap-2">
+        <a id="open-raw" href="#" target="_blank" rel="noopener" class="small d-none">Open raw URL ↗</a>
+        <button id="copy-btn" type="button" class="btn btn-outline-secondary btn-sm" disabled>
+          <i class="bi bi-clipboard"></i> Copy
+        </button>
+      </div>
     </div>
     <textarea id="content" class="form-control" readonly placeholder="Content will appear here…"></textarea>
   </div>
 
-  <!-- Bootstrap JS (optional for better UX) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous"></script>
   <script>
     const qs = new URLSearchParams(location.search);
     const urlInput = document.getElementById('url');
@@ -88,6 +110,9 @@
     const alertBox = document.getElementById('alert');
     const metaEl = document.getElementById('meta');
     const openRawLink = document.getElementById('open-raw');
+    const controls = document.getElementById('controls');
+    const toggleBtn = document.getElementById('toggle-controls');
+    const subtitle = document.getElementById('subtitle');
 
     function showSpinner(show) { spinner.style.display = show ? 'inline-flex' : 'none'; }
     function setAlert(message, type = 'danger') {
@@ -95,13 +120,33 @@
     }
     function formatBytes(bytes) {
       if (bytes === 0 || bytes == null) return '';
-      const k = 1024, sizes = ['B','KB','MB','GB'];
+      const k = 1024, sizes = ['B', 'KB', 'MB', 'GB'];
       const i = Math.floor(Math.log(bytes) / Math.log(k));
       return (bytes / Math.pow(k, i)).toFixed(2) + ' ' + sizes[i];
     }
+    function hideControlsAfterLoad() {
+      controls.classList.add('d-none');
+      toggleBtn.classList.remove('d-none');
+      toggleBtn.innerHTML = '<i class="bi bi-sliders"></i> Show instructions & URL';
+      subtitle.classList.add('d-none');
+    }
+    function showControls() {
+      controls.classList.remove('d-none');
+      toggleBtn.innerHTML = '<i class="bi bi-sliders"></i> Hide instructions & URL';
+      subtitle.classList.remove('d-none');
+    }
+
+    toggleBtn.addEventListener('click', () => {
+      const hidden = controls.classList.contains('d-none');
+      if (hidden) {
+        showControls();
+      } else {
+        hideControlsAfterLoad();
+      }
+    });
 
     async function fetchAndDisplay(targetUrl) {
-      if (!targetUrl) return;
+      if (!targetUrl) { showSpinner(false); return; }
       setAlert('');
       contentEl.value = '';
       copyBtn.disabled = true;
@@ -110,8 +155,6 @@
 
       try {
         const res = await fetch(targetUrl, {
-          // Default CORS mode; target server must allow it.
-          // mode: 'cors'
           headers: { 'Accept': 'text/*, application/json, */*' }
         });
 
@@ -127,38 +170,40 @@
           throw new Error(`HTTP ${res.status} ${res.statusText}`);
         }
 
-        // Heuristic: treat as text if content-type includes "text", "json", "xml", or empty.
         const isTextish = /text|json|xml|csv|yaml|markdown|html/i.test(contentType) || contentType === '';
         if (!isTextish) {
-          setAlert(`Warning: This looks like a non-text file (${contentType}). Displaying as text may be garbled.`, 'warning');
+          setAlert(`This looks like a non‑text file (${contentType}). Displaying as text may be garbled.`, 'warning');
         }
 
         const text = await res.text();
         contentEl.value = text;
         copyBtn.disabled = text.length === 0;
-
         openRawLink.classList.remove('d-none');
         openRawLink.href = targetUrl;
+
+        // Ensure spinner is hidden before collapsing controls
+        showSpinner(false);
+        hideControlsAfterLoad();
 
       } catch (err) {
         console.error(err);
         setAlert(
-          `Failed to fetch. ${err.message}.<br/>
-           <span class="small text-muted">If this is a CORS issue, the file host must allow cross-origin requests.</span>`,
+          `Failed to fetch. ${err.message}.<br/>` +
+          `<span class="small text-muted">If this is a CORS issue, the file host must allow cross‑origin requests.</span>`,
           'danger'
         );
+        showControls();
       } finally {
+        // Double‑ensure spinner is off after any outcome
         showSpinner(false);
         loadBtn.disabled = false;
       }
     }
 
-    // Load button / form submit
     loadForm.addEventListener('submit', (e) => {
       e.preventDefault();
       const u = urlInput.value.trim();
       if (!u) return;
-      // Update the address bar (so sharing the page preserves the URL)
       const newQs = new URLSearchParams(location.search);
       newQs.set('url', u);
       const newUrl = `${location.pathname}?${newQs.toString()}${location.hash}`;
@@ -166,7 +211,6 @@
       fetchAndDisplay(u);
     });
 
-    // Copy button
     copyBtn.addEventListener('click', async () => {
       try {
         await navigator.clipboard.writeText(contentEl.value);
@@ -177,12 +221,16 @@
       }
     });
 
-    // If ?url= is present, auto-load
     const initialUrl = qs.get('url');
     if (initialUrl) {
       urlInput.value = initialUrl;
       fetchAndDisplay(initialUrl);
+    } else {
+      controls.classList.remove('d-none');
+      toggleBtn.classList.add('d-none');
+      showSpinner(false);
     }
   </script>
 </body>
+
 </html>
